# Collections

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
doc/: CallActivity.java  Note.md
documents/: Note.md  常用且不熟练.md
inyu_xlog/: README.md  build.gradle  decode_mars_crypt_log_file.py  upload_nexus.gradle
library_gles/: build.gradle
library_origin/: build.gradle
library_widget/: build.gradle
library_xlog/: upload_nexus.gradle
module_media/: README.md  (+1 more)
module_media/src/main/cpp/: CMakeLists.txt  native-lib.cpp
modules/module_media/src/main/cpp/: CMakeLists.txt
modules/module_opengl/src/main/: AndroidManifest.xml  CMakeLists.txt
modules/module_opengl/src/main/assets/: supplierconfig.json
modules/module_opengl/src/main/cpp/: native-lib.cpp
modules/module_opengl/src/main/cpp/egl/: egl_helper.cpp  wzm_egl_helper.cpp  wzm_egl_thread.cpp
modules/module_opengl/src/main/cpp/filter/: opengl_filter_normal.cpp  opengl_filter_normal_copy.cpp  opengl_filter_yuv.cpp
modules/module_opengl/src/main/cpp/include/egl/: egl_helper.h  wzm_egl_helper.h  wzm_egl_thread.h
modules/module_opengl/src/main/cpp/include/filter/: opengl_filter_normal.h  opengl_filter_normal_copy.h  opengl_filter_yuv.h
modules/module_opengl/src/main/cpp/include/opengl/: base_opengl.h  opengl_controller.h  opengl_filter_normal.h  opengl_filter_normal_copy.h  opengl_filter_yuv.h
modules/module_opengl/src/main/cpp/include/utils/: android_log_utils.h  jni_utils.h  matrix_utils.h  shader_glsl.h  shader_utils.h
modules/module_opengl/src/main/cpp/opengl/: base_opengl.cpp  opengl_controller.cpp  opengl_filter_normal.cpp  opengl_filter_normal_copy.cpp  opengl_filter_yuv.cpp
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/: OpenGLActivity.kt  OpenGLAppDelegate.kt
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/camera/: GLCameraPreviewActivity.kt
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/cpp/: CppYuvActivity.java  OpenGLCppActivity.java
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/cpp/opengl/: CppSurfaceView.java  NativeOpenGl.java  SurfaceLifecycle.java
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/customgl/: CustomGLSurfaceActivity.kt  CustomGLSurfaceView.java
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/fbo/: FboRenderer.java  GLFboImageActivity.kt  GLFboImageRenderer.java  GLFboImageTextureView.java
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/image/: GLImageActivity.kt  GLImageRenderer.java  GLImageTextureView.java
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/justshow/: JustShowActivity.kt
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/matrix/: GLFboMatrixActivity.kt  GLFboMatrixRenderer.java  GLFboMatrixTextureView.java
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/module/: ActivityItem.kt
modules/module_opengl/src/main/java/com/wangzhumo/app/module/opengl/multi/: FboMultiRenderer.java  GLFboMultiActivity.kt  GLFboMultiRenderer.java  GLFboMultiTextureView.java
modules/module_opengl/src/main/res/layout/: activity_cpp_yuv.xml  activity_custom_glsurface.xml  activity_glcamera_preview.xml  activity_glfbo_image.xml  activity_glfbo_multi.xml  activity_glimage.xml  activity_just_show.xml  activity_opengl_cpp.xml
modules/module_opengl/src/main/res/raw/: gles_fragment_surface_black_shader.glsl  gles_fragment_surface_shader.glsl  gles_fragment_yuv_shader.glsl  gles_vertex_shader_matrix_texture.glsl  gles_vertex_surface_shader.glsl
modules/module_opengl/src/main/res/values/: strings.xml
(+471 files in other folders)
